# hypermodern

./: .flake8  .gitignore  LICENSE  README.md  coverage.xml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  tests.yml
docs/: conf.py
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: reference.rst.txt
src/hypermodern/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
