[tool.poetry]
name = "hypermodern"
version = "0.1.0"
description = "The Hypermodern python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/raiene/hypermodern"
repository = "https://github.com/raiene/hypermodern"
keywords = ["hypermodern"]
authors = ["Raiene <raienesousa@mpto.mp.br>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.4.1"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"

[tool.poetry.scripts]
hypermodern = "hypermodern.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

