[tool.poetry]
name = "hypermodern"
version = "0.1.0"
description = "The Hypermodern python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/raiene/hypermodern"
repository = "https://github.com/raiene/hypermodern"
keywords = ["hypermodern"]
authors = ["Raiene <raienesousa@mpto.mp.br>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.4.1"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
black = "^19.10b0"
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.770"

[tool.poetry.scripts]
hypermodern = "hypermodern.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
