[tool.poetry]
name = "hypermodern"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/raiene/hypermodern"
repository = "https://github.com/raiene/hypermodern"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
requests = "^2.31"
marshmallow = "^3.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
coverage = {extras = ["toml"], version = "^7.3"}
pytest-cov = "^4.1"
pytest-mock = "^3.11"
flake8 = "^6.1"
black = "^26.3"
flake8-bugbear = "^23.10"
flake8-bandit = "^4.1"
safety = "^2.3"
mypy = "^1.6"
flake8-annotations = "^3.0"
typeguard = "^4.1"
xdoctest = "^1.1"
sphinx = "^7.2"
sphinx-autodoc-typehints = "^1.25"
codecov = "^2.1"

[tool.poetry.scripts]
hypermodern-python = "hypermodern.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
